--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       background: linear-gradient(to right, #e0f7fa, #ffffff);
       display: flex;
       flex-direction: column;
-      min-height: 100vh;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
+      min-height: 100vh;
     }
     #loader {
       position: fixed;
@@ -21,59 +21,56 @@
       width: 100%; height: 100%;
       background: #e0f7fa;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
       z-index: 1000;
-      flex-direction: column;
     }
     #loader img {
       width: 100px;
       animation: spin 2s linear infinite;
     }
     #loader span {
-      margin-top: 15px;
+      margin-top: 10px;
       font-size: 18px;
       color: #2E8B57;
       font-weight: bold;
     }
     @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
+      0% {transform: rotate(0deg);}
+      100% {transform: rotate(360deg);}
     }
     #chatbox {
       background: #ffffff;
       width: 90%; max-width: 500px;
-      margin-top: 20px;
+      margin-top: 30px;
       border-radius: 16px;
       box-shadow: 0 8px 24px rgba(0,0,0,0.1);
       display: flex;
       flex-direction: column;
-      height: 80vh;
+      height: 75vh;
       overflow: hidden;
       position: relative;
     }
     #floraFace {
-      width: 120px; height: 120px;
+      width: 120px;
+      height: 120px;
       border-radius: 50%;
-      object-fit: cover;
       margin-top: 20px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+      object-fit: cover;
       border: 3px solid #2E8B57;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
     }
     #messages {
       flex: 1;
       overflow-y: auto;
       padding: 20px;
-      scrollbar-width: thin;
-      scrollbar-color: #2E8B57 #f1f1f1;
     }
     .user, .bot {
-      margin: 10px 0;
       max-width: 70%;
       padding: 12px 18px;
       border-radius: 20px;
-      animation: fadeIn 0.5s ease;
-      position: relative;
+      margin: 10px 0;
       font-size: 15px;
       line-height: 1.4;
       word-wrap: break-word;
@@ -98,18 +95,9 @@
       padding: 14px 20px;
       margin: 10px;
       cursor: pointer;
-      font-weight: 600;
-      font-size: 15px;
+      font-weight: bold;
     }
     button:hover { background-color: #246b46; }
-    @keyframes fadeIn {
-      from {opacity: 0; transform: translateY(10px);}
-      to {opacity: 1; transform: translateY(0);}
-    }
-    .dark-mode {
-      background: linear-gradient(to right, #2E2E2E, #1A1A1A);
-      color: white;
-    }
     #quick-replies button {
       margin: 5px;
       padding: 10px 14px;
@@ -117,8 +105,8 @@
       background: #1E90FF;
       color: white;
       border-radius: 10px;
-      cursor: pointer;
       font-size: 14px;
+      cursor: pointer;
     }
     #darkModeBtn {
       position: absolute;
@@ -136,15 +124,9 @@
       text-align: center;
     }
     @media (max-width: 600px) {
-      input[type="text"] {
-        width: 60%;
-      }
-      #floraFace {
-        width: 90px; height: 90px;
-      }
-      #chatbox {
-        height: 75vh;
-      }
+      input[type="text"] { width: 60%; }
+      #floraFace { width: 90px; height: 90px; }
+      #chatbox { height: 70vh; }
     }
   </style>
 </head>
@@ -168,22 +150,55 @@
   </div>
 </div>
 
+<div style="text-align: center; margin-top: 30px;">
+  <a href="mailto:growfinwealthofficial@gmail.com"
+     style="background-color: #2E8B57; color: white; padding: 15px 30px; text-decoration: none; font-size: 18px; border-radius: 8px; margin: 10px; display: inline-block;">
+    📧 Email Us
+  </a>
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSdFeaJqA8Y6VsM6Epz5bRXvQqAZuJwyT6zTfz-hUha_FjO6-w/viewform?usp=sharing"
+     target="_blank"
+     style="background-color: #1E90FF; color: white; padding: 15px 30px; text-decoration: none; font-size: 18px; border-radius: 8px; margin: 10px; display: inline-block;">
+    📝 Fill Contact Form
+  </a>
+</div>
+
+<div style="margin-top: 40px; width: 90%; max-width: 600px;">
+  <iframe src="https://anushka-106.github.io/GrowFinWealth-Multi-calculator/"
+          style="width:100%; height:500px; border:none; border-radius: 16px; box-shadow: 0 4px 20px rgba(0,0,0,0.1);" 
+          allowfullscreen>
+  </iframe>
+</div>
+
 <footer>
   Designed with ❤️ by Anushka Gaiki
 </footer>
 
 <script>
 const faqs = {
-  "sip kya hai": "SIP ek investment technique hai jisme aap har mahine thoda paisa invest karte hain mutual funds mein.",
-  "mutual fund kya hai": "Mutual Fund ek professionally managed fund hai jisme kai investors ka paisa alag alag stocks/bonds mein invest hota hai.",
-  "growfin services": "GrowFin aapko SIPs, Mutual Funds, Retirement Planning, Child Education aur Wealth Creation ke solutions deta hai.",
-  "retirement planning": "Retirement planning ke liye GrowFin customized plans banata hai taaki aap apna safe aur secure retirement enjoy kar saken.",
-  "tax saving": "GrowFin aapko ELSS aur other tax-saving options suggest karta hai jo Section 80C ke andar aate hain.",
-  "emergency fund": "Emergency Fund unexpected situations ke liye ek zaruri safety net hai. GrowFin ke saath apna emergency fund plan kariye.",
-  "anushka gaiki kaun hai": "Anushka Gaiki ek AMFI-certified Financial Advisor aur GrowFin Wealth ki founder hain.",
-  "anushka kaun hai": "Anushka Gaiki ek trusted Financial Expert hain jo smart investing aur planning mein madad karti hain.",
-  "growfin owner kaun hai": "GrowFin Wealth ki founder aur financial advisor hain Anushka Gaiki."
+  "sip kya hota hai": "Namaste! 🌸 SIP ka full form hai Systematic Investment Plan. Isme aap har mahine ek fixed amount invest karte hain mutual fund me, taaki aapka bada goal aaram se poora ho jaye.",
+  "sip se kaise invest karte hain": "Aap ek mutual fund scheme choose karte ho, apna monthly amount decide karte ho, aur automatic bank deduction setup karte ho. Investment regular chalta rahega! 🌼",
+  "minimum sip kitni hoti hai": "Aap ₹500 per month se bhi apna SIP start kar sakte hain. Kuch schemes me ₹1000 minimum hota hai.",
+  "sip aur lumpsum me kya fark hai": "SIP me aap monthly invest karte hain, aur Lumpsum me ek saath bada amount. SIP market ke ups-downs ka benefit deta hai.",
+  "mutual fund kya hota hai": "Mutual fund ek pool hai jisme kai log apna paisa invest karte hain, aur expert fund manager stocks/bonds me lagata hai.",
+  "mutual funds safe hain kya": "Mutual Funds SEBI ke rules ke under aate hain. Risk fund ke type pe depend karta hai.",
+  "risk kaise samjhein": "Risk fund ke type aur market par depend karta hai. High return wale funds ka risk bhi high hota hai.",
+  "lumpsum kab karein": "Jab ek bada amount ek saath invest karna ho aur long term view ho, tab Lumpsum investment sahi rahta hai.",
+  "best mutual fund kaise choose karein": "Fund performance, risk level, fund manager ka experience aur aapke goal ko dekhkar choose karein.",
+  "mutual fund returns": "Equity funds average 10-15% aur debt funds 6-8% returns de sakte hain, market conditions ke hisaab se.",
+  "mutual fund tax": "Equity fund returns ₹1 lakh se upar 10% LTCG tax lagta hai. Debt fund pe alag rules hain.",
+  "elss fund kya hai": "ELSS ek tax saving mutual fund hai, jo Section 80C ke under ₹1.5 lakh tak tax benefit deta hai, aur 3 saal lock-in hota hai.",
+  "growfin services": "GrowFin Wealth smart mutual fund investment, SIP planning, retirement planning aur goal-based advisory services deta hai!",
+  "growfin ko choose kyu karein": "GrowFin Wealth personal attention, trustworthy advice aur safe investment options provide karta hai. 🌷",
+  "growfin wealth kya hai": "GrowFin Wealth ek trusted mutual fund distribution aur planning platform hai, designed by Anushka Gaiki. 🌸",
+  "anushka gaiki kaun hai": "Anushka Gaiki ek AMFI-registered mutual fund distributor aur GrowFin Wealth ki founder hain."
 };
+
+const closingLines = [
+  "I hope maine aapke sawaal ka sahi samadhan diya! 🙏",
+  "Dhanyawaad, FinFlora se baat karne ke liye! 🌸 Apka din shubh ho!",
+  "Have a nice day! Bye from FinFlora! 🌼",
+  "Kisi aur madad ke liye Contact Buttons ka use kijiye! 🌟"
+];
 
 function initBot() {
   setTimeout(() => {
@@ -193,18 +208,15 @@ function initBot() {
 }
 
 function startBot() {
-  botReply("🌸 Namaste! Main FinFlora hoon.\nMain aapki financial journey mein madad karne ke liye yahaan hoon! Kuch poochhna chahenge?");
+  botReply("🌸 Namaste! Main FinFlora hoon. Main aapki financial journey mein madad karne ke liye yahaan hoon! Aap apna sawaal likhiye...");
 }
 
 function sendMessage() {
   let userText = document.getElementById("userInput").value.toLowerCase().trim();
   if (!userText) return;
-
   addMessage(userText, "user");
   document.getElementById("userInput").value = "";
-
   addTypingAnimation();
-
   setTimeout(() => {
     removeTypingAnimation();
     let answer = "🙏 Maaf kijiye, is vishay par mere paas abhi jaankari nahi hai. Aap kuch aur pooch sakte hain!";
@@ -214,9 +226,9 @@ function sendMessage() {
         break;
       }
     }
-    addMessage(answer, "bot");
+    addMessage(answer + "\n\n" + randomClosing(), "bot");
     playSound();
-  }, 800);
+  }, 1000);
 }
 
 function addMessage(text, sender) {
@@ -248,18 +260,21 @@ function playSound() {
   audio.play();
 }
 
+function randomClosing() {
+  return closingLines[Math.floor(Math.random() * closingLines.length)];
+}
+
 function toggleDarkMode() {
   document.body.classList.toggle("dark-mode");
 }
 
-// Enter key also sends message
 document.getElementById("userInput").addEventListener("keypress", function(e) {
   if (e.key === "Enter") {
     sendMessage();
   }
 });
 
-const replies = ["SIP kya hai?", "Mutual Fund kya hai?", "GrowFin services?", "Retirement planning?", "Tax saving?", "Emergency Fund?"];
+const replies = ["SIP kya hota hai?", "Mutual Fund kya hota hai?", "GrowFin Services?", "ELSS Fund kya hai?", "Retirement Planning?", "Tax Saving Options?"];
 const quickReplyArea = document.getElementById("quick-replies");
 replies.forEach(reply => {
   let btn = document.createElement("button");
